--- a/main/templates/layout/basic.html
+++ b/main/templates/layout/basic.html
@@ -28,15 +28,16 @@
                 <div class="collapse navbar-collapse justify-content-end"
                     id="navbarNav">
                     <div class="navbar-nav">
+                        {% if user.is_authenticated %}
                         <div class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle"
                                 data-bs-toggle="dropdown" href="#">Профиль</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Мои объявления</a> 
+                                <a class="dropdown-item" href="{% url 'main:profile' %}">Мои объявления</a> 
                                 <a class="dropdown-item" href="#">Изменить личные данные</a>
                                 <a class="dropdown-item" href="#">Изменить пароль</a>
                                 <hr class="dropdown-divider">
-                                <form class="px-3">
+                                <form class="px-3" method="post" action="{% url 'main:logout' %}">
                                     {% csrf_token %}
                                     {% bootstrap_button 'Выйти' button_class='btn-danger' %}
                                 </form>
@@ -44,8 +45,10 @@
                                 <a class="dropdown-item" href="#">Удалить</a>
                             </div>
                         </div>
+                        {% else %}                     
                         <a class="nav-link" href="#">Регистрация</a>
-                        <a class="nav-link" href="#">Вход</a>
+                        <a class="nav-link" href="{% url 'main:login' %}">Вход</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
