--- a/main/templates/layout/basic.html
+++ b/main/templates/layout/basic.html
@@ -34,8 +34,8 @@
                                 data-bs-toggle="dropdown" href="#">Профиль</a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="{% url 'main:profile' %}">Мои объявления</a> 
-                                <a class="dropdown-item" href="#">Изменить личные данные</a>
-                                <a class="dropdown-item" href="#">Изменить пароль</a>
+                                <a class="dropdown-item" href="{% url 'main:profile_edit' %}">Изменить личные данные</a>
+                                <a class="dropdown-item" href="{% url 'main:password_edit' %}">Изменить пароль</a>
                                 <hr class="dropdown-divider">
                                 <form class="px-3" method="post" action="{% url 'main:logout' %}">
                                     {% csrf_token %}
